Bug 109309 - Dropdown menu for currency is misplaced on Wayland + GTK3
Summary: Dropdown menu for currency is misplaced on Wayland + GTK3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.3.4.2 release
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:6.0.0
Keywords:
: 114210 (view as bug list)
Depends on:
Blocks: Wayland
  Show dependency treegraph
 
Reported: 2017-07-24 13:28 UTC by pavelz
Modified: 2017-12-04 09:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pavelz 2017-07-24 13:28:48 UTC
Description:
The dropdown menu for currency format is misplaced on Wayland + GTK3, it misbehaves for the toolbar button and also for the button in the sidebar.

Steps to Reproduce:
1. Click the dropdown symbol on currency button in the toolbar or in the sidebar.

Actual Results:  
The dropdown menu is misplaced.

Expected Results:
The dropdown menu should be aligned to the currency button.


Reproducible: Always

User Profile Reset: Yes

Additional Info:
Version: 5.3.4.2
Build ID: 5.3.4.2-4.fc26
CPU Threads: 2; OS Version: Linux 4.11; UI Render: default; VCL: gtk3; Layout Engine: new; 
Locale: cs-CZ (cs_CZ.UTF-8); Calc: group


User-Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:54.0) Gecko/20100101 Firefox/54.0
Comment 1 Commit Notification 2017-07-30 05:09:50 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f61005dd9c4bf86e92e4c60677cf06a949a7af7

tdf#109309 Currency dropdown is misplaced under Wayland

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Maxim Monastirsky 2017-12-04 09:13:16 UTC
*** Bug 114210 has been marked as a duplicate of this bug. ***