tdf#109309 Currency dropdown is misplaced under Wayland

- Base SvxCurrencyToolBoxControl on PopupWindowController,
  so we still allow tearoff, but without marking the window
  as self-decorated (unless actually teared-off).

- Add support for toggle state to PopupWindowController.

Change-Id: I60e004e6ada3efe092352cb93be5aae346073f83